demos/devdocs/0.58.0/nvdocument/type-aliases/DocumentData.md
# Type Alias: DocumentData

```ts
type DocumentData = object;
```

Defined in: [nvdocument.ts:359](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L359)

## Properties

### connectomes?

```ts
optional connectomes: string[];
```

Defined in: [nvdocument.ts:370](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L370)

---

### customData?

```ts
optional customData: string;
```

Defined in: [nvdocument.ts:371](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L371)

---

### encodedDrawingBlob?

```ts
optional encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:367](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L367)

---

### encodedImageBlobs?

```ts
optional encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:366](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L366)

---

### imageOptionsArray?

```ts
optional imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:361](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L361)

---

### labels?

```ts
optional labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:365](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L365)

---

### meshesString?

```ts
optional meshesString: string;
```

Defined in: [nvdocument.ts:368](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L368)

---

### meshOptionsArray?

```ts
optional meshOptionsArray: unknown[];
```

Defined in: [nvdocument.ts:362](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L362)

---

### opts?

```ts
optional opts: Partial<NVConfigOptions>;
```

Defined in: [nvdocument.ts:363](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L363)

---

### previewImageDataURL?

```ts
optional previewImageDataURL: string;
```

Defined in: [nvdocument.ts:364](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L364)

---

### sceneData?

```ts
optional sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:369](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L369)

---

### title?

```ts
optional title: string;
```

Defined in: [nvdocument.ts:360](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L360)
