demos/devdocs/0.61.0/nvdocument/type-aliases/DocumentData.md
# Type Alias: DocumentData

```ts
type DocumentData = object;
```

Defined in: [nvdocument.ts:395](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L395)

## Properties

### completedAngles?

```ts
optional completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:409](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L409)

---

### completedMeasurements?

```ts
optional completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:408](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L408)

---

### connectomes?

```ts
optional connectomes: string[];
```

Defined in: [nvdocument.ts:406](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L406)

---

### customData?

```ts
optional customData: string;
```

Defined in: [nvdocument.ts:407](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L407)

---

### encodedDrawingBlob?

```ts
optional encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:403](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L403)

---

### encodedImageBlobs?

```ts
optional encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:402](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L402)

---

### imageOptionsArray?

```ts
optional imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:397](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L397)

---

### labels?

```ts
optional labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:401](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L401)

---

### meshesString?

```ts
optional meshesString: string;
```

Defined in: [nvdocument.ts:404](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L404)

---

### meshOptionsArray?

```ts
optional meshOptionsArray: unknown[];
```

Defined in: [nvdocument.ts:398](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L398)

---

### opts?

```ts
optional opts: Partial<NVConfigOptions>;
```

Defined in: [nvdocument.ts:399](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L399)

---

### previewImageDataURL?

```ts
optional previewImageDataURL: string;
```

Defined in: [nvdocument.ts:400](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L400)

---

### sceneData?

```ts
optional sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:405](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L405)

---

### title?

```ts
optional title: string;
```

Defined in: [nvdocument.ts:396](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L396)
